--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!doctype html>
 
-<html>
+<html lang="fr">
 
 <head>
   <title>Riot todo</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <link rel="stylesheet" href="todo.css">
+  <link rel="icon" type="image/png" href="/img/favicon.png" />
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 
