--- a/test/local_storage_db_test.html
+++ b/test/local_storage_db_test.html
@@ -14,6 +14,7 @@
   <script src="../localstoragedb.js"></script>
   <script>mocha.setup('bdd')</script>
   <script src="local_storage_db_test.js"></script>
+  <script src="local_storage_db_covid.js"></script>
   <script>mocha.run();</script>
 </body>
 </html>
