--- a/test/local_storage_db_test.html
+++ b/test/local_storage_db_test.html
@@ -10,11 +10,11 @@
   <div id="messages"></div>
   <div id="fixtures"></div>
   <script src="../node_modules/mocha/mocha.js"></script>
-  <script src="../node_modules/chai/chai.js"></script>
+  <!--<script src="../node_modules/chai/chai.js"></script>
   <script src="../localstoragedb.js"></script>
-  <script>mocha.setup('bdd')</script>
-  <script src="local_storage_db_test.js"></script>
+  <script>//mocha.setup('bdd')</script>-->
+  <!--<script src="local_storage_db_test.js"></script>-->
   <script src="local_storage_db_covid.js"></script>
-  <script>mocha.run();</script>
+  <script>console.log(createDBCovid())</script>
 </body>
 </html>
