--- a/local_storage_db_test.html
+++ b/local_storage_db_test.html
@@ -1,20 +1,30 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="utf-8">
   <title>Cow tests</title>
   <!--<link rel="stylesheet" media="all" href="../node_modules/mocha/mocha.css">-->
 </head>
+
 <body>
-  <div id="mocha"><p><a href=".">Index</a></p></div>
+  <div id="mocha">
+    <p><a href=".">Index</a></p>
+  </div>
   <div id="messages"></div>
   <div id="fixtures"></div>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <!--<script src="/node_modules/mocha/mocha.js"></script>-->
   <!--<script src="../node_modules/chai/chai.js"></script>-->
   <script src="localstoragedb.js"></script>
   <!--<script>//mocha.setup('bdd')</script>-->
   <!--<script src="local_storage_db_test.js"></script>-->
   <script src="local_storage_db_covid.js"></script>
-  <script>console.log(createDBCovid())</script>
+  <script>
+    resetBase();
+    createDBCovid();
+    printAll();
+  </script>
 </body>
+
 </html>
