localstorage auto fini

--- a/local_storage_db_test.html
+++ b/local_storage_db_test.html
@@ -21,9 +21,11 @@
   <!--<script src="local_storage_db_test.js"></script>-->
   <script src="local_storage_db_covid.js"></script>
   <script>
-    resetBase();
-    createDBCovid();
-    printAll();
+    /*
+    if(diffTime()){
+      updateDBCovid()
+    }
+    */
   </script>
 </body>
 
