Chart so Beatiful

--- a/local_storage_db_test.html
+++ b/local_storage_db_test.html
@@ -31,6 +31,7 @@
     console.log("Fini !")
     console.log(selectTime());
     console.log(selectGlobal());
+    selectCountriesCode();
   </script>
 </body>
 
