--- a/local_storage_db_test.html
+++ b/local_storage_db_test.html
@@ -21,8 +21,7 @@
   <!--<script src="local_storage_db_test.js"></script>-->
   <script src="local_storage_db_covid.js"></script>
   <script>
-    //resetBase();
-
+    resetBase();
     if (!dbCovidExist()) {
       createDBCovid();
       console.log("Base de donnée créé !")
@@ -31,8 +30,7 @@
       console.log("Base de donnée Update !")
     }
     console.log("Fini !")
-    selectCountries();
-    addEvoCountry("DE");
+    while(dbCovidExist()===false){}
     printAll();
 
   </script>
