--- a/local_storage_db_test.html
+++ b/local_storage_db_test.html
@@ -21,8 +21,8 @@
   <!--<script src="local_storage_db_test.js"></script>-->
   <script src="local_storage_db_covid.js"></script>
   <script>
-    //resetBase();
-    
+    resetBase();
+    /*
     if (!dbCovidExist()) {
       createDBCovid();
       console.log("Base de donnée créé !")
@@ -33,7 +33,7 @@
     console.log("Fini !");
     addEvoCountry("FR");
     printAll();
-
+    */
   </script>
 </body>
 
