--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
 
     <script src="assets/amcharts4/core.js"></script>
     <script src="assets/amcharts4/maps.js"></script>
+    <script src="assets/amcharts4/charts.js"></script>
+    <script src="assets/amcharts4/themes/animated.js"></script>
     <script src="assets/amcharts4/geodata/worldLow.js"></script>
 
     <script type="riot" src="riot/app.riot"></script>
@@ -31,6 +33,7 @@
     <script type="riot" src="riot/leftbar.riot"></script>
     <script type="riot" src="riot/infoplus.riot"></script>
     <script type="riot" src="riot/tablecountry.riot"></script>
+    <script type="riot" src="riot/graphcoutry.riot"></script>
     <script type="riot" src="riot/mapchart.riot"></script>
 </head>
 
