Graphic country page

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <script type="riot" src="riot/leftbar.riot"></script>
     <script type="riot" src="riot/infoplus.riot"></script>
     <script type="riot" src="riot/tablecountry.riot"></script>
-    <script type="riot" src="riot/graphcoutry.riot"></script>
+    <script type="riot" src="riot/graphcountry.riot"></script>
     <script type="riot" src="riot/mapchart.riot"></script>
 </head>
 
