Move local_storage_db files

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <link rel="stylesheet" href="assets/Fontawesome-5.13.0/css/all.css">
     <script src="assets/Fontawesome-5.13.0/js/all.js"></script>
 
-    <script src="localstoragedb.js"></script>
-    <script src="local_storage_db_covid.js"></script>
+    <script src="assets/js/localstoragedb.js"></script>
+    <script src="assets/js/local_storage_db_covid.js"></script>
 
     <script src="assets/amcharts4/core.js"></script>
     <script src="assets/amcharts4/maps.js"></script>
