--- a/local_storage_db_test.html
+++ b/local_storage_db_test.html
@@ -16,10 +16,10 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <!--<script src="/node_modules/mocha/mocha.js"></script>-->
   <!--<script src="../node_modules/chai/chai.js"></script>-->
-  <script src="localstoragedb.js"></script>
+  <script src="assets/js/localstoragedb.js"></script>
   <!--<script>//mocha.setup('bdd')</script>-->
   <!--<script src="local_storage_db_test.js"></script>-->
-  <script src="local_storage_db_covid.js"></script>
+  <script src="assets/js/local_storage_db_covid.js"></script>
   <script>
     resetBase();
     /*
