--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     <script type="riot" src="riot/app.riot"></script>
     <script type="riot" src="riot/navbar.riot"></script>
     <script type="riot" src="riot/leftbar.riot"></script>
+    <script type="riot" src="riot/home.riot"></script>
     <script type="riot" src="riot/infoplus.riot"></script>
     <script type="riot" src="riot/tablecountry.riot"></script>
     <script type="riot" src="riot/graphcountry.riot"></script>
