--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
     <script src="assets/js/localstoragedb.js"></script>
     <script src="assets/js/local_storage_db_covid.js"></script>
 
+    <link rel="stylesheet" type="text/css" href="assets/DataTables/datatables.min.css"/>
+    <script type="text/javascript" src="assets/DataTables/datatables.min.js"></script>
+    <script type="text/javascript" src="assets/DataTables/DataTables-1.10.21/js/dataTables.bootstrap4.min.js"></script>
+    <script type="text/javascript" src="assets/DataTables/DataTables-1.10.21/css/dataTables.bootstrap4.min.css"></script>
+
     <script src="assets/amcharts4/core.js"></script>
     <script src="assets/amcharts4/maps.js"></script>
     <script src="assets/amcharts4/charts.js"></script>
